Adds yellow button and items

--- a/index.css
+++ b/index.css
@@ -24,4 +24,14 @@ h1 {
 
 .contact-list >ul {
 list-style-type: none;
+display: block;
 }
+
+ul.contact-list >li {
+  display: inline;
+}
+
+.ui.yellow.button{
+  color: black; 
+}
+
