--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 html, body {
   margin: 3%;
+  padding-bottom: 100%;
 }
 
 h1 {
@@ -24,7 +25,7 @@ h1 {
 
 .contact-list >ul {
 list-style-type: none;
-display: block;
+display: inline;
 }
 
 ul.contact-list >li {
@@ -35,3 +36,27 @@ ul.contact-list >li {
   color: black; 
 }
 
+#input_list {
+  list-style-type: none;
+
+}
+
+#Notes_list {
+  padding-top: 20px;
+}
+
+#contact-notes {
+  border-color: brown;
+  border-radius: 5px;
+  width: 350px;
+  height: 50px;
+}
+
+.ui.input.focus {
+  
+}
+
+.ui.card {
+  width: 250px;
+  margin: 20px;
+}
