--- a/index.css
+++ b/index.css
@@ -3,11 +3,15 @@ html, body {
   padding-bottom: 100%;
 }
 
-h1 {
-
-}
 
 .ui.block.header {
+  background-color: rgb(101, 167, 126);
+  border-radius: 9px;
+  text-align: center;
+  border: none;
+}
+
+.ui.block.header#form {
   background-color: rgb(101, 167, 126);
   border-radius: 9px;
   text-align: center;
@@ -46,17 +50,39 @@ ul.contact-list >li {
 }
 
 #contact-notes {
-  border-color: brown;
+  border-color: black;
   border-radius: 5px;
   width: 350px;
   height: 50px;
+  text-align: left;
+  line-height: 1.21429em;
+  font-family: Lato, "Helvetica Neue", Arial, Helvetica, sans-serif;
+  padding: .67857143em 1em;
+  -webkit-tap-highlight-color: rgba(255,255,255,0);
+  max-width: 100%;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 auto;
+    flex: 1 0 auto;
+    outline: 0;
+    font-size: normal;
 }
 
-.ui.input.focus {
-  
+.inputform {
+  background-color: rgb(174, 175, 174);
+  padding: 20px;
+  margin-top: 20px;
+  border-radius: 9px;
 }
 
 .ui.card {
   width: 250px;
   margin: 20px;
+  
 }
+
+.ui.input.focus > input{
+  border-color: black!important;
+}
+
+
+
