--- a/index.css
+++ b/index.css
@@ -5,17 +5,11 @@ html, body {
 
 
 .ui.block.header {
-  background-color: rgb(101, 167, 126);
+  background-color: rgb(248, 118, 31);
   border-radius: 9px;
   text-align: center;
   border: none;
-}
-
-.ui.block.header#form {
-  background-color: rgb(101, 167, 126);
-  border-radius: 9px;
-  text-align: center;
-  border: none;
+  font-size: 40px;
 }
 
 .container {
@@ -82,6 +76,10 @@ ul.contact-list >li {
 
 .ui.input.focus > input{
   border-color: black!important;
+}
+
+#grid-container {
+  display: grid;
 }
 
 
